<resources>
    <string name="app_name">Biz Bulls</string>
    <string name="loading">Please Wait……</string>
    <string name="generalPrefPackageIdentifier">com.biz.bizbulls.GeneralPrefs</string>
    <string name="unsupported_property_type">Unsupported property type received in sharedPrefs</string>
    <string name="makemoney">Make more money!</string>
    <string name="becomeacap">Become a Captain</string>
    <string name="completeprofile">Complete your profile</string>
    <string name="menupayment">My Account</string>
    <string name="menumyrides">My Referrals</string>
    <string name="menurefer">My Offers</string>
    <string name="menuvalet">My Wallet</string>
    <string name="menurewards">About us</string>
    <string name="menupowerpass">Terms &amp; Conditions</string>
    <string name="menunotify">Privacy Policy</string>
    <string name="menuclaims">Register Complaint</string>
    <string name="menucontactus">Contact us</string>
    <string name="menufollowus">Follow us</string>
    <string name="f_submit">Submit</string>
    <string name="f_next">Next   &#62;</string>
    <string name="f_prev">&#60;   Prev</string>
    <string name="f_bankAccount">Bank Account Details (for financial processes with us)</string>
    <string name="f_auth">Authorization</string>
    <string name="ct_writebankname">Bank name</string>
    <string name="ct_bankactname">Name (as in account)</string>
    <string name="ct_writeacctnumb">Account number</string>
    <string name="ct_writebranch">Branch name</string>
    <string name="ct_writeifsccode">Ifsc code</string>
    <string name="ct_authinfo">I certify that all the information given in this application is true to the best of my knowledge.</string>
    <string name="ct_authinfoone">Should any information stated by me in this application be in-correct, my association / License with you is liable to immediate termination without refund of any payment.</string>
    <string name="ct_authinfotwo">I declare that I have not been convicted previously by any court of law nor have bad report from any institution or individual.</string>
    <string name="ct_authinfothree">Should there be any changes in the particulars given by me in this application ,I shall immediately inform the organization about the same.</string>
    <string name="Interpretation_and_Definitions">Interpretation and Definitions</string>
    <string name="Interpretation1">Interpretation</string>
    <string name="Interpretation2">The words in which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or plural.</string>
    <string name="Interpretation3">Definitions</string>
    <string name="Interpretation4">For these Terms and Conditions:
\n•	Country refers to India
\n•	Company (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Biz Bulls India, BIZ BULLS Franchising Pvt Ltd., Near Nagarjuna Circle, Punjagutta, Hyderabad, Telangana - 500016.
\n•	Device means any device that can access the Service such as a computer, a cellphone, or a digital tablet.
\n•	Service refers to the Website.
\n•	Terms and Conditions (also referred to as "Terms") mean these Terms and Conditions that form the entire agreement between You and the Company regarding the use of the Service.
\n•	Third-party Social Media Service means any services or content (including data, information, products, or services) provided by a third party that may be displayed, included, or made available by the Service.
\n•	Website refers to Biz Bulls India, accessible from https://www.bizbullsindia.com/
\n•	You mean the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.
</string>
    <string name="Acknowledgment">Acknowledgment</string>
    <string name="Acknowledgment1">These are the Terms and Conditions governing the use of this Service and the agreement that operates between You and the Company. These Terms and Conditions set out the rights and obligations of all users regarding the use of the Service.
Your access to and use of the Service is conditioned on Your acceptance of and compliance with these Terms and Conditions. These Terms and Conditions apply to all visitors, users, and others who access or use the Service.
By accessing or using the Service You agree to be bound by these Terms and Conditions. If You disagree with any part of these Terms and Conditions then You may not access the Service.
You represent that you are over the age of 18. The Company does not permit those under 18 to use the Service.
Your access to and use of the Service is also conditioned on Your acceptance of and compliance with the Privacy Policy of the Company. Our Privacy Policy describes Our policies and procedures on the collection, use, and disclosure of Your personal information when You use the Application or the Website and tells You about Your privacy rights and how the law protects You. Please read Our Privacy Policy carefully before using Our Service.
</string>
    <string name="What_you_can_expect_from_us">What you can expect from us</string>
    <string name="What_you_can_expect_from_us1">Biz Bull India Pvt Ltd is a company dealing with franchising a brand. We offer the following services to our clients
\n•	Guidance in starting your own business
\n•	Branding your business
\n•	Promoting your business with our marketing strategies
\n•	Licensing with the government Offering support to your business in various stages of its journey
</string>
    <string name="Links_to_Other_Websites">Links to Other Websites</string>
    <string name="Links_to_Other_Websites1">Our Service may contain links to third-party websites or services that are not owned or controlled by the Company.
The Company has no control over and assumes no responsibility for, the content, privacy policies, or practices of any third-party websites or services. You further acknowledge and agree that the Company shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with the use of or reliance on any such content, goods, or services available on or through any such web sites or services.
We strongly advise You to read the terms and conditions and privacy policies of any third-party websites or services that You visit.
</string>
    <string name="Termination">Termination</string>
    <string name="Termination1">We may terminate or suspend Your access immediately, without prior notice or liability, for any reason whatsoever, including without limitation if You breach these Terms and Conditions.
Upon termination, Your right to use the Service will cease immediately.</string>
    <string name="Limitation_of_Liability">Limitation of Liability</string>
    <string name="Limitation_of_Liability1">Notwithstanding any damages that You might incur, the entire liability of the Company and any of its suppliers under any provision of this Terms and Your exclusive remedy for all of the foregoing shall be limited to the amount actually paid by You.
To the maximum extent permitted by applicable law, in no event shall the Company or its suppliers be liable for any special, incidental, indirect, or consequential damages whatsoever (including, but not limited to, damages for loss of profits, loss of data or other information, for business interruption, for personal injury, loss of privacy arising out of or in any way related to the use of or inability to use the Service, third-party software and/or third-party hardware used with the Service, or otherwise in connection with any provision of this Terms), even if the Company or any supplier has been advised of the possibility of such damages and even if the remedy fails of its essential purpose.
</string>
    <string name="Disclaimer">"AS IS" and "AS AVAILABLE" Disclaimer</string>
    <string name="Disclaimer1">The Service is provided to You AS IS and AS AVAILABLE and with all faults and defects without warranty of any kind. To the maximum extent permitted under applicable law, the Company, on its own behalf and behalf of its Affiliates and its and their respective licensors and service providers, expressly disclaims all warranties, whether express, implied, statutory, or otherwise, concerning the Service, including all implied warranties of merchantability, fitness for a particular purpose, title and non-infringement, and warranties that may arise out of a course of dealing, course of performance, usage or trade practice. Without limitation to the foregoing, the Company provides no warranty or undertaking, and makes no representation of any kind that the Service will meet Your requirements, achieve any intended results, be compatible or work with any other software, applications, systems, or services, operate without interruption, meet any performance or reliability standards or be error-free or that any errors or defects can or will be corrected.
Without limiting the foregoing, neither the Company nor any of the companys providers makes any representation or warranty of any kind, express or implied: (i) as to the operation or availability of the Service, or the information, content, and materials or products included thereon; (ii) that the Service will be uninterrupted or error-free; (iii) as to the accuracy, reliability, or currency of any information or content provided through the Service; or (iv) that the Service, its servers, the content, or e-mails sent from or on behalf of the Company are free of viruses, scripts, trojan horses, worms, malware, timebombs or other harmful components.
</string>
    <string name="Governing_Law">Governing Law</string>
    <string name="Governing_Law1">The laws of the Country, excluding its conflicts of law rules, shall govern this Terms and Your use of the Service. </string>
    <string name="Disputes_Resolution1">If You have any concerns or disputes about the Service, You agree to first try to resolve the dispute informally by contacting the Company.</string>
    <string name="Severability">Severability</string>
    <string name="Severability1">If any provision of these Terms is held to be unenforceable or invalid, such provision will be changed and interpreted to accomplish the objectives of such provision to the greatest extent possible under applicable law and the remaining provisions will continue in full force and effect</string>
    <string name="Waiver">Severability</string>
    <string name="Waiver1">Except as provided herein, the failure to exercise a right or to require performance of an obligation under these Terms shall not affect a party\'s ability to exercise such right or require such performance at any time thereafter nor shall the waiver of a breach constitute a waiver of any subsequent breach.</string>
    <string name="Translation_Interpretation">Translation Interpretation</string>
    <string name="Translation_Interpretation1">These Terms and Conditions may have been translated if We have made them available to You on our Service. You agree that the original English text shall prevail in the case of a dispute.</string>
    <string name="Changes_to_These_Terms_and_Conditions">Changes to These Terms and Conditions</string>
    <string name="Changes_to_These_Terms_and_Conditions1">We reserve the right, at Our sole discretion, to modify or replace these Terms at any time. If a revision is a material. We will make reasonable efforts to provide at least 30 days’ notice before any new terms take effect. What constitutes a material change will be determined at Our sole discretion.
By continuing to access or use Our Service after those revisions become effective, You agree to be bound by the revised terms. If You do not agree to the new terms, in whole or in part, please stop using the website and the Service.
</string>
</resources>